--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.1",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
